Task/split docker (#33)
* add linting checks to docker-compose.prod, update workflow to use docker-compose.prod. Fix linting issues for code to pass checks

* make sure that all tasks in workflow specifies run or uses

* add env-variables to workflow, update env-var of database

* fix indenting of env-variables, remove duplicate runs-on

* formatting with pre-commit

* add DJANGO_SECRET_KEY to workflow

* Revert "formatting with pre-commit"

This reverts commit 9361edd6dfd3e20e94feb46d247799dc6b23370c.

* move pre-commit, add setup.cfg to dockerfile

* add .flake8, make new migrations since prev workflow failed, reformat to fit flake8, delete setup.cfg

* reformat env-variables

* navigate to correct dir in docker-compose.prod

* move .flake8 and pyproject to correct dir

* add missing asterisk in .flake8

* add env for DJANGO_SECRET_KEY to docker-compose, adjust settings for flake, add setup.cfg for flake, set max-length to 100

* add -f flag to docker-compose push

* update ports to comply with azure

--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -1,6 +1,26 @@
 [tool.black]
 line-length = 88
 include = '\.pyi?$'
+exclude = '''
+(
+  /(
+      \.eggs         # exclude a few common directories in the
+    | \.git          # root of the project
+    | \.hg
+    | \.mypy_cache
+    | \.tox
+    | \.venv
+    | _build
+    | buck-out
+    | build
+    | dist
+    | migrations
+    | media
+  )/
+  | foo.py           # also separately exclude a file named foo.py in
+                     # the root of the project
+)
+'''
 
 [tool.isort]
 line_length = 88
@@ -19,5 +39,22 @@ forced_separate = [
     ]
 skip = [
     "__init__.py",
-    "migrations"
+    "migrations",
+    "venv"
     ]
+
+[tool.coverage]
+[tool.coverage.run]
+
+# files to omit from coverage
+omit = [
+    "*/__init__.py",
+    "*/apps.py",
+    "*/factories/*",
+    "*/migrations/*",
+    "*/settings/*",
+    "*/tests/*",
+    "*/urls.py",
+    "*wsgi.py",
+    "manage.py",
+]
