--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -52,6 +52,7 @@ jobs:
           uses: azure/webapps-deploy@v2
           with:
             app-name: kundestyrt-nsi-dev-backend-${env.IMAGE_VERSION}
+            slot-name: 'staging'
             publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
 
         - name: Azure logout
