--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -51,7 +51,7 @@ jobs:
         - name: Deploy web App using GH Action azure/webapps-deploy
           uses: azure/webapps-deploy@v2
           with:
-            app-name: kundestyrt-nsi-dev-backend-${env.IMAGE_VERSION}
+            app-name: kundestyrt-nsi-dev-backend
             slot-name: 'staging'
             publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
 
