--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -54,7 +54,7 @@ jobs:
             app-name: kundestyrt-nsi-dev-backend
             slot-name: ${env.IMAGE_VERSION}
             publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-            image: acrkundestyrtnsi.azurecr.io/studentidrett-backend:${env.IMAGE_VERSION}
+            images: acrkundestyrtnsi.azurecr.io/studentidrett-backend:${env.IMAGE_VERSION}
 
         - name: Azure logout
           run: |
