--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -52,7 +52,7 @@ jobs:
           uses: azure/webapps-deploy@v2
           with:
             app-name: kundestyrt-nsi-dev-backend
-            slot-name: ${env.IMAGE_VERSION}
+            slot-name: 'staging'
             publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
             images: acrkundestyrtnsi.azurecr.io/studentidrett-backend:${env.IMAGE_VERSION}
 
