--- a/.github/workflows/django-staging.yml
+++ b/.github/workflows/django-staging.yml
@@ -40,6 +40,21 @@ jobs:
         - run: |
             docker-compose -f docker-compose.prod.yml push
 
+        - uses: azure/appservice-settings@v1
+          with:
+            app-name: kundestyrt-nsi-dev-backend
+            slot-name: 'staging'
+            app-settings-json: '${{ secrets.APP_SETTINGS }}'
+            general-settings-json: '{"alwaysOn": "false", "webSocketsEnabled": "true"}'
+
+        - name: Deploy web App using GH Action azure/webapps-deploy
+          uses: azure/webapps-deploy@v2
+          with:
+            app-name: kundestyrt-nsi-dev-backend
+            slot-name: ${{ env.IMAGE_VERSION }}
+            publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+            images: acrkundestyrtnsi.azurecr.io/studentidrett-backend:${{ env.IMAGE_VERSION }}
+
         - name: Azure logout
           run: |
             az logout
