--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -8,11 +8,11 @@ name: Backend build, test and push to Azure
 jobs:
     build-and-deploy:
         env:
-          DJANGO_SECRET_KEY: ${secrets.DJANGO_SECRET_KEY}
-          POSTGRES_USER: ${secrets.POSTGRES_USER}
-          POSTGRES_PASSWORD: ${secrets.POSTGRES_PASSWORD}
-          POSTGRES_DB: ${secrets.POSTGRES_DB}
-          IMAGE_VERSION: staging
+          DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
+          POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+          POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
+          IMAGE_VERSION: ${{ github.sha }}
         runs-on: ubuntu-latest
         steps:
         - name: 'Checkout GitHub Action'
