Task/staging env (#34)
* add linting checks to docker-compose.prod, update workflow to use docker-compose.prod. Fix linting issues for code to pass checks

* make sure that all tasks in workflow specifies run or uses

* add env-variables to workflow, update env-var of database

* fix indenting of env-variables, remove duplicate runs-on

* formatting with pre-commit

* add DJANGO_SECRET_KEY to workflow

* Revert "formatting with pre-commit"

This reverts commit 9361edd6dfd3e20e94feb46d247799dc6b23370c.

* move pre-commit, add setup.cfg to dockerfile

* add .flake8, make new migrations since prev workflow failed, reformat to fit flake8, delete setup.cfg

* reformat env-variables

* navigate to correct dir in docker-compose.prod

* move .flake8 and pyproject to correct dir

* add missing asterisk in .flake8

* add env for DJANGO_SECRET_KEY to docker-compose, adjust settings for flake, add setup.cfg for flake, set max-length to 100

* add -f flag to docker-compose push

* update ports to comply with azure

* add two new workflows to push to staging and prod-environments

* add Azure logout to workflows, add deploy web app to try and create a deployment slot upon GHA

* add slot to deployment

* fix duplicate slot-definition

* add image to be deployed

* change 'image' to 'images'

* hard-code staging to control for errors

* fix env-syntax

* update workflows to contain prod and staging-settings at correct places, try github-sha on standard workflow

* fix psql-env, add TODO in docker-compose

* update github.sha to github.actor to maintain a personal staging-environment

* remove hard-coded 'staging' from slot-name, push prod to default web app service

--- a/.github/workflows/django-staging.yml
+++ b/.github/workflows/django-staging.yml
@@ -1,9 +1,9 @@
 on:
-  pull_request:
+  push:
     branches:
       - dev
 
-name: Backend build, test and push to Azure
+name: Stable backend build, test and push to Azure
 
 jobs:
     build-and-deploy:
@@ -12,8 +12,7 @@ jobs:
           POSTGRES_USER: ${secrets.POSTGRES_USER}
           POSTGRES_PASSWORD: ${secrets.POSTGRES_PASSWORD}
           POSTGRES_DB: ${secrets.POSTGRES_DB}
-          IMAGE_VERSION: ${{ github.actor }} 
-          
+          IMAGE_VERSION: staging
         runs-on: ubuntu-latest
         steps:
         - name: 'Checkout GitHub Action'
@@ -47,7 +46,6 @@ jobs:
             slot-name: ${{ env.IMAGE_VERSION }}
             app-settings-json: '${{ secrets.APP_SETTINGS }}'
             general-settings-json: '{"alwaysOn": "false", "webSocketsEnabled": "true"}'
-
 
         - name: Deploy web App using GH Action azure/webapps-deploy
           uses: azure/webapps-deploy@v2
