--- a/.github/workflows/django-prod.yml
+++ b/.github/workflows/django-prod.yml
@@ -1,9 +1,9 @@
 on:
-  pull_request:
+  push:
     branches:
-      - dev
+      - main
 
-name: Backend build, test and push to Azure
+name: Stable backend build, test and push to Azure
 
 jobs:
     build-and-deploy:
@@ -12,8 +12,7 @@ jobs:
           POSTGRES_USER: ${secrets.POSTGRES_USER}
           POSTGRES_PASSWORD: ${secrets.POSTGRES_PASSWORD}
           POSTGRES_DB: ${secrets.POSTGRES_DB}
-          IMAGE_VERSION: ${{ github.actor }} 
-          
+          IMAGE_VERSION: prod
         runs-on: ubuntu-latest
         steps:
         - name: 'Checkout GitHub Action'
@@ -44,16 +43,13 @@ jobs:
         - uses: azure/appservice-settings@v1
           with:
             app-name: kundestyrt-nsi-dev-backend
-            slot-name: ${{ env.IMAGE_VERSION }}
             app-settings-json: '${{ secrets.APP_SETTINGS }}'
             general-settings-json: '{"alwaysOn": "false", "webSocketsEnabled": "true"}'
-
 
         - name: Deploy web App using GH Action azure/webapps-deploy
           uses: azure/webapps-deploy@v2
           with:
             app-name: kundestyrt-nsi-dev-backend
-            slot-name: ${{ env.IMAGE_VERSION }}
             publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
             images: acrkundestyrtnsi.azurecr.io/studentidrett-backend:${{ env.IMAGE_VERSION }}
 
