--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -12,7 +12,7 @@
       networks:
         - postgres_network
     web:
-      image: acrkundestyrtnsi.azurecr.io/studentidrett-backend:latest
+      image: acrkundestyrtnsi.azurecr.io/studentidrett-backend:${IMAGE_VERSION}
       build:
         context: .
         dockerfile: config/django/Dockerfile
@@ -37,6 +37,7 @@
         flake8 &&
         python manage.py makemigrations --check
         "
+      # TODO: Add pytest when this is fixed
   networks:
     postgres_network:
       driver: bridge
