--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -2,28 +2,35 @@
 
   services:
     postgres:
-      image: postgres:latest
+      container_name: nsi_db
+      restart: always
+      image: postgres:12
       ports:
         - "5432:5432"
-      environment:
-      - POSTGRES_DB=nsi
-      - POSTGRES_USER=django
-      - POSTGRES_PASSWORD=django
+      env_file:
+        - app/.env
+      volumes:
+      - postgres_data:/var/lib/postgresql/data
       networks:
         - postgres_network
     web:
-      image: acrkundestyrtnsi.azurecr.io/studentidrett-backend:latest
+      container_name: nsi_backend
+      command: bash -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
+      volumes:
+      - .:/app
+      env_file:
+        - app/.env
       build:
         context: .
         dockerfile: config/django/Dockerfile
-      volumes:
-        - .:/app
-      networks:
-        - postgres_network
       ports:
         - "8000:8000"
       depends_on:
         - postgres
+      networks:
+        - postgres_network
   networks:
     postgres_network:
       driver: bridge
+  volumes:
+    postgres_data:
