--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -12,8 +12,8 @@ jobs:
           POSTGRES_USER: ${secrets.POSTGRES_USER}
           POSTGRES_PASSWORD: ${secrets.POSTGRES_PASSWORD}
           POSTGRES_DB: ${secrets.POSTGRES_DB}
-          IMAGE_VERSION: ${{ github.actor }} 
-          
+          IMAGE_VERSION: staging
+
         runs-on: ubuntu-latest
         steps:
         - name: 'Checkout GitHub Action'
