--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -27,6 +27,7 @@ jobs:
         - name: 'Build image'
           run: |
             docker-compose -f docker-compose.prod.yml build
+            docker tag nginx:1.13 ${{ secrets.REGISTRY_LOGIN_SERVER }}/studentidrett-backend:nginx
 
         - name: 'Run tests and linting'
           run: |
