--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -55,7 +55,9 @@ jobs:
             app-name: kundestyrt-nsi-dev-backend
             slot-name: ${{ env.IMAGE_VERSION }}
             publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-            images: acrkundestyrtnsi.azurecr.io/studentidrett-backend:${{ env.IMAGE_VERSION }}
+            images:
+            - acrkundestyrtnsi.azurecr.io/studentidrett-backend:${{ env.IMAGE_VERSION }}
+            - acrkundestyrtnsi.azurecr.io/studentidrett-backend:nginx-${{ env.IMAGE_VERSION }}
 
         - name: Azure logout
           run: |
