change cookies-model to appropriate length of cookie, update nginx to serve staticfiles

--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -5,21 +5,23 @@ events {
 }
 
 http {
+
+    default_type  application/octet-stream;
+
     upstream app {
         server web:8000;
     }
 
     server {
 
-        listen 0.0.0.0:80;
-        server_name kundestyrt-nsi-dev-backend.azurewebsites.net;
+        listen 80;
 
         location /static/ {
-            alias /app/static/;
+            alias /code/staticfiles/;
         }
 
         location /media/ {
-            alias /app/media/;
+            alias /code/media/;
         }
 
         location / {
