--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -28,8 +28,10 @@
       networks:
         - postgres_network
         - nginx_network
-      ports:
-        - "8000:8000"
+      volumes:
+        - static_volume:/code/staticfiles
+      expose:
+        - 8000
       depends_on:
         - postgres
       command: bash -c "
@@ -49,8 +51,8 @@
       - 80:80
       volumes:
       - ./config/nginx/conf.d:/nginx.conf
-      - static_volume:/app/static
-      - media_volume:/app/media
+      - static_volume:/code/staticfiles
+      - media_volume:/code/media
       depends_on:
       - web
       networks:
