--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -5,7 +5,7 @@ psycopg2-binary==2.8.6
 gunicorn==20.0.4
 
 # Test tools
-coverage[toml]==5.3
+coverage==5.3
 
 
 # Code quality: Linting, formatting
