--- a/config/django/Dockerfile
+++ b/config/django/Dockerfile
@@ -1,9 +1,8 @@
 FROM python:3.6
 ENV PYTHONUNBUFFERED 1
 RUN pip install --upgrade pip
-RUN mkdir /code
-WORKDIR /code
-ADD ./app /code/
+WORKDIR /home/site/wwwroot
+ADD ./app /home/site/wwwroot
 RUN pip install -r requirements.txt
 
 # init.sh converted to UNIX
