--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -17,11 +17,11 @@ http {
         listen 80;
 
         location /static/ {
-            alias /code/staticfiles/;
+            alias /staticfiles/;
         }
 
         location /media/ {
-            alias /code/media/;
+            alias /media/;
         }
 
         location / {
