--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -13,6 +13,7 @@ jobs:
           POSTGRES_PASSWORD: ${secrets.POSTGRES_PASSWORD}
           POSTGRES_DB: ${secrets.POSTGRES_DB}
           IMAGE_VERSION: ${{ github.actor }}
+          ACR: ${secrets.REGISTRY_LOGIN_SERVER}
 
         runs-on: ubuntu-latest
         steps:
