add docker-compose down -v to fix GHA

--- a/.github/workflows/django-prod.yml
+++ b/.github/workflows/django-prod.yml
@@ -27,6 +27,7 @@ jobs:
 
         - name: 'Build image'
           run: |
+            docker-compose -f docker-compose.prod.yml down -v
             docker-compose -f docker-compose.prod.yml build
 
         - name: 'Run tests and linting'
