update to use postgres 12

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,7 +2,7 @@
 
   services:
     postgres:
-      image: postgres:latest
+      image: postgres:12
       ports:
         - "5432:5432"
       environment:
