--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -10,6 +10,7 @@ coreschema==0.0.4
 coverage==5.3
 distlib==0.3.1
 Django==3.1.1
+django-cors-headers==3.5.0
 django-nose==1.4.7
 django-rest-swagger==2.2.0
 djangorestframework==3.11.1
