--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -8,11 +8,12 @@ name: Backend build, test and push to Azure
 jobs:
     build-and-deploy:
         env:
-          DJANGO_SECRET_KEY: ${secrets.DJANGO_SECRET_KEY}
-          POSTGRES_USER: ${secrets.POSTGRES_USER}
-          POSTGRES_PASSWORD: ${secrets.POSTGRES_PASSWORD}
-          POSTGRES_DB: ${secrets.POSTGRES_DB}
-          IMAGE_VERSION: staging
+          DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
+          POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+          POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
+          IMAGE_VERSION: ${{ github.actor }}
+          ACR: ${{ secrets.REGISTRY_LOGIN_SERVER }}
 
         runs-on: ubuntu-latest
         steps:
@@ -40,22 +41,6 @@ jobs:
             password: ${{ secrets.REGISTRY_PASSWORD }}
         - run: |
             docker-compose -f docker-compose.prod.yml push
-
-        - uses: azure/appservice-settings@v1
-          with:
-            app-name: kundestyrt-nsi-dev-backend
-            slot-name: ${{ env.IMAGE_VERSION }}
-            app-settings-json: '${{ secrets.APP_SETTINGS }}'
-            general-settings-json: '{"alwaysOn": "false", "webSocketsEnabled": "true"}'
-
-
-        - name: Deploy web App using GH Action azure/webapps-deploy
-          uses: azure/webapps-deploy@v2
-          with:
-            app-name: kundestyrt-nsi-dev-backend
-            slot-name: ${{ env.IMAGE_VERSION }}
-            publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-            images: acrkundestyrtnsi.azurecr.io/studentidrett-backend:${{ env.IMAGE_VERSION }}
 
         - name: Azure logout
           run: |
