--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -13,24 +13,47 @@
       - postgres_data:/var/lib/postgresql/data
       networks:
         - postgres_network
+
     web:
       container_name: nsi_backend
-      command: bash -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
       volumes:
       - .:/app
+      - static_volume:/staticfiles
+      - media_volume:/mediafiles
       env_file:
         - app/.env
       build:
         context: .
         dockerfile: config/django/Dockerfile
-      ports:
-        - "8000:8000"
       depends_on:
         - postgres
+      expose:
+        - 8000
       networks:
         - postgres_network
+        - nginx_network
+
+    nginx:
+      image: nginx:1.13
+      build:
+        context: ./config/nginx
+        dockerfile: Dockerfile
+      ports:
+      - 8000:80
+      volumes:
+      - ./config/nginx/conf.d:/nginx.conf
+      - static_volume:/staticfiles
+      - media_volume:/mediafiles
+      depends_on:
+      - web
+      networks:
+      - nginx_network
   networks:
     postgres_network:
       driver: bridge
+    nginx_network:
+      driver: bridge
   volumes:
     postgres_data:
+    static_volume:
+    media_volume:
