fix/refactoring: split settings, refactor tests and remove unnecessary packages from requirements.txt (#36)
* Split settings for different environments

* Fix split settings structure

* Add permissions to clubs

* Re-add database functionality for github_workflow after splitting settings

* Clean up attributes in model fields

* Fixed undeclared variable

* Fix usage of url and hyperlinked model

* Update to new hosted url

* Add get_response helper function, and refactor tests

* Add info what to do when pre-commit hooks fail

* Add get_response helper function, and refactor tests

* change from pricing to membership_fee to more aligned with the sports domain

* Fix incorrect variable name

* Fix edit of pricing to membership_fee

* remove unnecessary packages

* pythonify code

* pythonify code

* remove usage of 'ø'

* add env_name to readme

* move pyproject.toml

* move coverage settings

* remove toml dependency for coverage

* fix error code and if statement

* Change to NotFound error

* add short description

* fix tests

* fix import order

* temporary remove permissions

* use latest nginx version

* add __str__ for sport

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -20,6 +20,7 @@
         driver: "json-file"
       environment:
         DJANGO_SECRET_KEY: ${DJANGO_SECRET_KEY}
+        ENV_NAME: ${ENV_NAME}
         POSTGRES_DB: ${POSTGRES_DB}
         POSTGRES_USER: ${POSTGRES_USER}
         POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
