--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -11,6 +11,7 @@ coverage==5.3
 distlib==0.3.1
 Django==3.1.1
 django-cors-headers==3.5.0
+django-elasticsearch-dsl==7.1.4
 django-nose==1.4.7
 django-rest-swagger==2.2.0
 djangorestframework==3.11.1
@@ -35,7 +36,6 @@ packaging==20.4
 pathspec==0.8.0
 Pillow==7.2.0
 pre-commit==2.7.1
-psycopg2==2.8.6
 psycopg2-binary==2.8.6
 pycodestyle==2.6.0
 pyflakes==2.2.0
