--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -28,6 +28,8 @@ jobs:
         - name: 'Build image'
           run: |
             docker-compose -f docker-compose.prod.yml build
+            docker tag docker.elastic.co/elasticsearch/elasticsearch:7.9.2 \
+            ${{ secrets.REGISTRY_LOGIN_SERVER }}/studentidrett-backend:elastic-${{ github.actor }}
 
         - name: 'Run tests and linting'
           run: |
