update Dockerfile, remove enforcing of bootstrap-checks in prod

--- a/config/elasticsearch/Dockerfile
+++ b/config/elasticsearch/Dockerfile
@@ -1,5 +1,6 @@
 FROM docker.elastic.co/elasticsearch/elasticsearch:7.9.2
 
-RUN bin/elasticsearch-plugin install --batch repository-gcs
+RUN echo vm.max_map_count=262144 > /etc/sysctl.conf && \
+    echo vm.swappiness=0 > /etc/sysctl.conf
 
-COPY sysctl.conf ./etc/sysctl.conf.d
+RUN bin/elasticsearch-plugin install --batch repository-gcs
