add ssh proxy-pass to nginx.conf

--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -39,4 +39,15 @@ http {
             proxy_pass http://app;
         }
     }
+
+    upstream ssh{
+       server web:2222;
+    }
+
+    server {
+       listen 2222;
+       location / {
+            proxy_pass http://ssh;
+        }
+    }
 }
