change listen to 2222 for ssh

--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -45,9 +45,9 @@ http {
     }
 
     server {
-       listen 80;
+       listen 2222;
        location / {
-            proxy_pass http://ssh;
+            proxy_pass ssh;
         }
     }
 }
