move ssh to nginx for access on azure

--- a/config/django/Dockerfile
+++ b/config/django/Dockerfile
@@ -12,16 +12,6 @@ COPY config/django/init.sh /usr/local/bin/
 RUN chmod u+x /usr/local/bin/init.sh
 RUN dos2unix /usr/local/bin/init.sh && apt-get --purge remove -y dos2unix && rm -rf /var/lib/apt/lists/
 
-# ssh
-ENV SSH_PASSWD "root:Docker!"
-RUN apt-get update \
-    && apt-get install -y --no-install-recommends dialog \
-    && apt-get update \
-	&& apt-get install -y --no-install-recommends openssh-server \
-	&& echo "$SSH_PASSWD" | chpasswd
-
-COPY config/django/sshd_config /etc/ssh/
-
-EXPOSE 2222 8000
+EXPOSE 8000
 
 CMD ["/usr/local/bin/init.sh"]
