--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -47,13 +47,20 @@
     elasticsearch:
       image: ${ACR}/studentidrett-backend:elastic-${IMAGE_VERSION}
       environment:
-      - xpack.security.enabled=false
-      - discovery.type=single-node
-      - discovery.seed_hosts=[]
-      - es.enforce.bootstrap.checks=false
+       xpack.security.enabled: false
+       discovery.type: single-node
+       discovery.seed_hosts: []
+       discovery.zen.minimum_master_nodes: 1
       build:
         context: ./config/elasticsearch
         dockerfile: Dockerfile
+      ulimits:
+        memlock:
+          soft: -1
+          hard: -1
+        nofile:
+          soft: 65536
+          hard: 65536
       cap_add:
       - IPC_LOCK
       volumes:
